syntax = "proto3";

option csharp_namespace = "OrderAccountingSystem";

package product;

service ProductGreeter {
  rpc GetAllProducts (NullRequest) returns (AllProductReply);
  rpc GetProduct (ProductRequest) returns (ProductReply);
  rpc AddProduct (ProductRequest) returns (ProductReply);
  rpc ChangeProduct (ProductRequest) returns (ProductReply);
  rpc DeleteProduct (ProductRequest) returns (ProductReply);
}

message NullRequest {
}

message ProductRequest {
  string productId = 1;
  string name = 2;
  double price = 3;
}

message AllProductReply {
  repeated ProductReply products = 1;
}

message ProductReply {
  ExaminationReply examination_reply = 1;
  string productId = 2;
  string name = 3;
  double price = 4;
}

message ExaminationReply {
  bool argument_exception = 1;
  bool not_found_exception = 2;
  bool problem = 3;
}